# picofun

./: .gitignore  .nullify.yml  LICENSE.txt  MANIFEST.in  README.md  generator.py  picofun.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  publish.yaml  zizmor.yml
docs/: authentication.md
example/: README.md  extra.tf  include-endpoints.yaml  picofun.toml  zendesk.yaml
example/.github/workflows/: deploy.yaml
example/helpers/zendesk_common/: __init__.py  preprocessor.py
examples/cdk/: README.md  app.py  cdk.json  include-endpoints.yaml  picofun.toml  pyproject.toml
examples/github-app-cdk/: README.md  app.py  include-endpoints.yaml  picofun.toml  pyproject.toml
examples/github-app-cdk/helpers/: pyproject.toml
examples/github-app-cdk/helpers/github_auth/: __init__.py  preprocessor.py
examples/github-app-cdk/rotation/: handler.py  pyproject.toml
examples/github-app-cdk/templates/: lambda.py.j2
examples/github-app-cdk/tests/: __init__.py  test_preprocessor.py  test_rotation_handler.py
examples/swagger-meraki/: README.md  app.py  include-endpoints.yaml  picofun.toml  pyproject.toml
examples/zendesk/: README.md  include-endpoints.yaml  picofun.toml
examples/zendesk/.github/workflows/: deploy.yaml
examples/zendesk/helpers/zendesk_common/: __init__.py  preprocessor.py
picofun/: __init__.py  __main__.py  auth_generator.py  cli.py  config.py  endpoint_filter.py  errors.py  lambda_generator.py  layer.py  models.py  pyproject_manager.py  requirements_manager.py  security.py  spec.py  template.py  terraform_generator.py
picofun/iac/: __init__.py  base.py  cdk.py  terraform.py
picofun/parsers/: __init__.py  base.py  openapi3.py  ref_resolver.py  swagger2.py
picofun/templates/: auth_hooks.py.j2  construct.py.j2  lambda.py.j2  main.tf.j2
templates/: lambda.py.j2  lambda.tf.j2  main.tf.j2
tests/: test_auth_generator.py  test_cdk_generator.py  test_config.py  test_endpoint_filter.py  test_errors.py  test_lambda_generator.py  test_layer.py  test_models.py  test_parser_discovery.py  test_parsers.py  test_pyproject_manager.py  test_ref_resolver.py  test_requirements_manager.py  test_security.py  test_spec.py  test_spec_to_api_spec.py  test_swagger2_parser.py  test_template.py  test_terraform_generator.py
tests/data/: broken.json  broken.yaml  config.toml  config_relative.toml  config_server_both.toml  config_server_url.toml  config_server_variables.toml  config_unknown_variable.toml  invalid.toml  invalid_type.toml  petstore.toml  pyproject.toml  requirements.txt  spec_missing_defaults.json  spec_with_variables.json
tests/data/templates/: construct.py.j2  lambda.py.j2  main.tf.j2
tests/data/templates_override/: empty.j2
tests/fixtures/: spec_apikey_auth.yaml  spec_basic_auth.yaml  spec_bearer_auth.yaml  spec_multiple_schemes.yaml  spec_no_auth.yaml  swagger2_apikey_auth.yaml  swagger2_basic_auth.yaml  swagger2_petstore.json
tests/integration/: test_cdk_generation.py  test_full_generation.py
