[project]
name = "picofun"
authors = [
    {name = "Dave Hall", email = "skwashd@gmail.com"},
]
description = "PicoFun AWS Lambda generator"

dependencies = [
  "black==25.1.0", # ruff can't be invoked from code without shelling out
  "jinja2==3.1.5",
  "pydantic==2.10.5",
  "PyYAML==6.0.2",
  "requests==2.32.3",
  "tomli==2.2.1",
  "typer==0.15.1",
]

license = {file = "LICENSE.txt"}
readme = "README.md"

dynamic = ["version"]

[project.optional-dependencies]

dev = [
  "coverage==7.6.12",
  "pytest==8.3.4",
  "pytest-mock==3.14.0",
  "ruff==0.9.6",
]

build = [
  "build==1.2.2.post1",
  "twine==6.0.1",
]

[build-system]
requires = [
  "setuptools==75.8.0",
  "setuptools-git-versioning==2.1.0",
  "wheel==0.45.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
picfun = ["picofun/templates/*.j2"]

[project.scripts]
picofun = "picofun:__main__.main"

[tool.setuptools]
packages = ["picofun"]

[tool.setuptools-git-versioning]
enabled = true

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | \.nox
)
'''

[tool.ruff.lint]
# Rules listed at https://github.com/charliermarsh/ruff#supported-rules
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D203", "D211", "D212", "E501", "F403", "F405"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]
"output" = ["ALL"]