[project]
name = "picofun"
authors = [
    {name = "Dave Hall", email = "skwashd@gmail.com"},
]
description = "PicoFun AWS Lambda generator"

requires-python = ">=3.13"

dependencies = [
  "black==25.12.0", # ruff can't be invoked from code without shelling out
  "jinja2==3.1.6",
  "pydantic==2.12.5",
  "PyYAML==6.0.3",
  "requests==2.32.5",
  "tomlkit==0.14.0",
  "typer==0.21.1",
]

license = "BSD-3-Clause"
license-files = ["LICENSE"]

readme = "README.md"

dynamic = ["version"]

[dependency-groups]
dev = [
  "coverage==7.13.1",
  "pytest==9.0.2",
  "pytest-mock==3.15.1",
  "ruff==0.14.14",
]

build = [
  "build==1.4.0",
  "twine==6.2.0",
]

[build-system]
requires = [
  "setuptools==80.10.1",
  "setuptools-git-versioning==3.0.1",
  "wheel==0.46.3",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
picfun = ["picofun/templates/*.j2"]

[project.scripts]
picofun = "picofun:__main__.main"

[tool.setuptools]
packages = ["picofun"]

[tool.setuptools-git-versioning]
enabled = true

[tool.coverage.report]
show_missing = true
omit = [
    ".venv/*"
]

[tool.coverage.run]
cover_pylib = false

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | \.nox
)
'''

[tool.ruff.lint]
# Rules listed at https://github.com/charliermarsh/ruff#supported-rules
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D203", "D211", "D212", "E501", "F403", "F405"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]
"output" = ["ALL"]