[project]
name = "picofun-cdk-example"
version = "0.1.0"
description = "PicoFun CDK example using the Petstore API"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib==2.259.0",
    "constructs==10.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
