[project]
name = "picofun-github-app-cdk-example"
version = "0.1.0"
description = "PicoFun CDK example using the GitHub API with GitHub App authentication"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib==2.259.0",
    "constructs==10.6.0",
]

[dependency-groups]
dev = [
    "aws-lambda-powertools==3.29.0",
    "boto3==1.43.30",
    "coverage==7.14.2",
    "PyJWT[crypto]==2.13.0",
    "pytest==9.1.1",
    "pytest-mock==3.15.1",
    "ruff==0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helpers"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = ["cdk.out"]

[tool.ruff.lint]
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D203", "D211", "D212", "E501", "F403", "F405"]
fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]
