[project]
name = "picofun-meraki-example"
version = "0.1.0"
description = "PicoFun CDK example using the Cisco Meraki Dashboard API (Swagger 2.0)"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib==2.260.0",
    "constructs==10.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
