[project]
name = "picofun-github-app-rotation"
version = "0.1.0"
description = "GitHub App installation token rotation Lambda"
requires-python = ">=3.13"
dependencies = [
    "PyJWT[crypto]>=2.9,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["handler.py"]
